<resources>
    <string name="app_name">UniPlan</string>
    <string name="task_name">Task Name</string>
    <string name="task_name_view">Task Name:</string>
    <string name="class_view">Class:</string>
    <string name="description">Notes:</string>
    <string name="due_date">Due Date:</string>
    <string name="task_day">Day</string>
    <string name="task_month">Month</string>
    <string name="task_year">Year</string>
    <string name="optional">Optional</string>
    <string name="agenda">Agenda</string>
    <string name="back">Back</string>
    <string name="back2">Back</string>
    <string name="class_time_1">Class Time 1:</string>
    <string name="class_time_2">Class Time 2:</string>
    <string name="class_time_3">Class Time 3:</string>
    <string name="class_time_4">Class Time 4:</string>
    <string name="class_time_5">Class Time 5:</string>
    <string name="class_name">Class Name:</string>
    <string name="name">Name</string>

    <string-array name="dayOfWeek">
        <item>   </item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
</resources>
